cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark__cfn_templates__Tianyi2__IRIS__data__cloudformation_collected_templates_new__template_13758_secure.yaml
Description:  This template deploys a VPC, with a public and private subnet. It deploys an internet gateway,
  with a default route on the public subnet with a NAT gateway, and default routes for them in the private subnet.
Mappings:
  RegionMap:
    ap-northeast-1:
      Master: ami-09b18720cb71042df
      Agent: ami-09286ac2dfed71269
      Bastion: ami-09b18720cb71042df
    # TODO(DET-4258) Uncomment these when we fully support all P3 regions.
    # ap-northeast-2:
    #   Master: ami-07d16c043aa8e5153
    #   Agent: ami-0877aab94b7af89a2
    #   Bastion: ami-07d16c043aa8e5153
    # ap-southeast-1:
    #   Master: ami-00e912d13fbb4f225
    #   Agent: ami-048261d6b71c99d5a
    #   Bastion: ami-00e912d13fbb4f225
    # ap-southeast-2:
    #   Master: ami-055166f8a8041fbf1
    #   Agent: ami-049c5af8dace8dd8c
    #   Bastion: ami-055166f8a8041fbf1
    eu-central-1:
      Master: ami-06148e0e81e5187c8
      Agent: ami-04b9d6c9b90426154
      Bastion: ami-06148e0e81e5187c8
    eu-west-1:
      Master: ami-0fd8802f94ed1c969
      Agent: ami-0396ad10928aeeabc
      Bastion: ami-0fd8802f94ed1c969
    # eu-west-2:
    #   Master: ami-04842bc62789b682e
    #   Agent: ami-074c0b3b88ec243c5
    #   Bastion: ami-04842bc62789b682e
    us-east-1:
      Master: ami-0149b2da6ceec4bb0
      Agent: ami-0c4b83a32f4070afc
      Bastion: ami-0149b2da6ceec4bb0
    us-east-2:
      Master: ami-0d5bf08bc8017c83b
      Agent: ami-0ba8e39e517fa0dec
      Bastion: ami-0d5bf08bc8017c83b
    us-west-2:
      Master: ami-0c09c7eb16d3e8e70
      Agent: ami-0ecfbb06f4473ef66
      Bastion: ami-0c09c7eb16d3e8e70

Parameters:
  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.192.0.0/16

  PublicSubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    Default: 10.192.10.0/24

  PrivateSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
    Type: String
    Default: 10.192.20.0/24

  PrivateSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
    Type: String
    Default: 10.192.21.0/24

  Keypair:
    Description: Keypair for resources
    Type: AWS::EC2::KeyPair::KeyName

  MasterInstanceType:
    Type: String
    Description: Instance Type of Master
    Default: m5.large

  AuxAgentInstanceType:
    Type: String
    Description: Instance Type of agents in the auxiliary resource pool
    Default: t2.xlarge

  ComputeAgentInstanceType:
    Type: String
    Description: Instance Type of agents in the compute resource pool
    Default: p2.8xlarge

  BastionInstanceType:
    Type: String
    Description: Instance Type of Bastion
    Default: m5.large

  InboundCIDRRange:
    Type: String
    Description: Ip range for Inbound
    Default: 0.0.0.0/0

  ImageRepoPrefix:
    Type: String
    Description: Docker image repository to use for determined-master and determined-agent images
    Default: determinedai

  Version:
    Type: String
    Description: Determined version or commit for master image
    Default: 0.19.4-dev0

  DBPassword:
    Type: String
    Description: Password for database
    NoEcho: true

  MaxAuxContainersPerAgent:
    Type: Number
    Description: Maximum number of CPU containers to launch on agents in the default auxiliary resource pool.
    Default: 100

  MaxIdleAgentPeriod:
    Type: String
    Description: How long before idle agents are shutdown
    Default: 10m

  MaxAgentStartingPeriod:
    Type: String
    Description: How long to wait for agents to start up before retrying
    Default: 20m

  MinDynamicAgents:
    Type: Number
    Description: Minimum number of agents to keep running
    Default: 0

  MaxDynamicAgents:
    Type: Number
    Description: Maximum number of agents to launch simultaneously
    Default: 5

  SpotEnabled:
    Type: String
    Description: Whether to use spot instances or not
    Default: false

  SpotMaxPrice:
    Type: String
    Description: |
      The maximum hourly price you are willing to pay for the spot instance.
      Should be a number without a currency option, e.g. "5.00"
    Default: ''

  EnableCORS:
    Type: String
    Description: Whether to allow CORS requests or not
    Default: false

  MasterTLSCert:
    Type: String
    Description: Base64-encoded TLS certificate for the master
    Default: ""

  MasterTLSKey:
    Type: String
    Description: Base64-encoded TLS key for the master
    Default: ""

  MasterCertName:
    Type: String
    Description: Hostname to verify the master's TLS certificate against
    Default: ""

  SchedulerType:
    Type: String
    Description: Scheduler to use in Determined.
    Default: fair_share

  PreemptionEnabled:
    Type: String
    Description: Whether preemption is enabled (only supported for priority scheduler).
    Default: false

  CpuEnvImage:
    Type: String
    Description: Docker image for CPU tasks
    Default: ""

  GpuEnvImage:
    Type: String
    Description: Docker image for GPU tasks
    Default: ""

  LogGroupPrefix:
    Type: String
    Description: Prefix for output CloudWatch log group (the full log group will be "/<prefix>/<stack>")
    Default: determined

  MasterConfigTemplate:
    Type: String
    Description: Master config template
    Default:
  ### INJECT CODE: MasterConfigTemplate
      |
      checkpoint_storage:
        type: s3
        bucket: {{ .checkpoint_storage.bucket }}
        save_experiment_best: 0
        save_trial_best: 1
        save_trial_latest: 1

      db:
        user: postgres
        password: "{{ .db.password }}"
        host: "{{ .db.host }}"
        port: 5432
        name: determined
        ssl_mode: verify-ca
        ssl_root_cert: /etc/determined/db_ssl_root_cert.pem

      enable_cors: {{ .enable_cors }}

      resource_manager:
        type: agent
        default_aux_resource_pool: aux-pool
        default_compute_resource_pool: compute-pool
        scheduler:
          type: {{ .resource_manager.scheduler.type }}
          {{- if eq .resource_manager.scheduler.type "priority" }}
          preemption: {{ .resource_manager.scheduler.preemption_enabled }}
          {{- end }}

      resource_pools:
        - pool_name: aux-pool
          max_aux_containers_per_agent: {{ .resource_pools.pools.aux_pool.max_aux_containers_per_agent }}
          agent_reattach_enabled: {{ .resource_pools.pools.aux_pool.agent_reattach_enabled }}
          provider:
            instance_type: {{ .resource_pools.pools.aux_pool.instance_type }}
            {{- toYaml .resource_pools.aws | nindent 6}}

        - pool_name: compute-pool
          max_aux_containers_per_agent: 0
          agent_reattach_enabled: {{ .resource_pools.pools.compute_pool.agent_reattach_enabled }}
          provider:
            instance_type: {{ .resource_pools.pools.compute_pool.instance_type }}
            cpu_slots_allowed: true
            {{- toYaml .resource_pools.aws | nindent 6}}

      {{ if eq .scheme "https" }}
      security:
        tls:
          cert: /etc/determined/master.crt
          key: /etc/determined/master.key
      {{ end }}

      {{ if or (or .cpu_env_image .gpu_env_image) .bind_mounts }}
      task_container_defaults:
        {{- if .bind_mounts }}
        bind_mounts:
          {{- toYaml .bind_mounts | nindent 4}}
        {{- end }}
        {{- if or .cpu_env_image .gpu_env_image }}
        image:
          cpu: {{ .cpu_env_image }}
          gpu: {{ .gpu_env_image }}
        {{- end }}
      {{ end }}
  ### END INJECT CODE

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref AWS::StackName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref AWS::StackName

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnetCIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Public Subnet (AZ1)

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Public Subnet (AZ1)

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Public Subnet (AZ2)

  NatGatewayEIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Public Routes

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Private Routes (AZ1)

  DefaultPrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet2

  S3Endpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal: "*"
            Action: "*"
            Resource: "*"
      RouteTableIds:
        - !Ref PrivateRouteTable
        - !Ref PublicRouteTable
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcId: !Ref VPC

  BastionSecurityGroupSSH:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt BastionSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: !Ref InboundCIDRRange

  BastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group For Bastion
      VpcId: !Ref VPC
      Tags:
        - Key: user
          Value: !Ref AWS::StackName

  MasterSecurityGroupEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !GetAtt MasterSecurityGroup.GroupId
      DestinationSecurityGroupId: !GetAtt AgentSecurityGroup.GroupId
      FromPort: 0
      ToPort: 65535
      IpProtocol: tcp

  MasterSecurityGroupInternet:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !GetAtt MasterSecurityGroup.GroupId
      CidrIp: 0.0.0.0/0
      FromPort: 0
      ToPort: 65535
      IpProtocol: tcp

  MasterSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MasterSecurityGroup.GroupId
      FromPort: 8080
      ToPort: 8080
      IpProtocol: tcp
      SourceSecurityGroupId: !GetAtt AgentSecurityGroup.GroupId

  MasterSecurityGroupIngressUI:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MasterSecurityGroup.GroupId
      FromPort: 8080
      ToPort: 8080
      IpProtocol: tcp
      SourceSecurityGroupId: !GetAtt BastionSecurityGroup.GroupId

  MasterSecurityGroupTLSIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MasterSecurityGroup.GroupId
      FromPort: 8443
      ToPort: 8443
      IpProtocol: tcp
      SourceSecurityGroupId: !GetAtt AgentSecurityGroup.GroupId

  MasterSecurityGroupTLSIngressUI:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MasterSecurityGroup.GroupId
      FromPort: 8443
      ToPort: 8443
      IpProtocol: tcp
      CidrIp: !Ref InboundCIDRRange

  MasterSSHIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MasterSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      SourceSecurityGroupId: !GetAtt BastionSecurityGroup.GroupId

  AgentSecurityGroupEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !GetAtt AgentSecurityGroup.GroupId
      CidrIp: 0.0.0.0/0
      FromPort: 0
      ToPort: 65535
      IpProtocol: tcp

  AgentSecurityGroupIngressMaster:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt AgentSecurityGroup.GroupId
      FromPort: 0
      ToPort: 65535
      IpProtocol: tcp
      SourceSecurityGroupId: !GetAtt MasterSecurityGroup.GroupId

  AgentSecurityGroupIngressAgent:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt AgentSecurityGroup.GroupId
      FromPort: 0
      ToPort: 65535
      IpProtocol: tcp
      SourceSecurityGroupId: !GetAtt AgentSecurityGroup.GroupId

  AgentSSHIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt AgentSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      SourceSecurityGroupId: !GetAtt BastionSecurityGroup.GroupId

  DatabaseEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !GetAtt DatabaseSecurityGroup.GroupId
      CidrIp: 0.0.0.0/0
      FromPort: 0
      ToPort: 65535
      IpProtocol: -1

  DatabaseIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt DatabaseSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      SourceSecurityGroupId: !GetAtt MasterSecurityGroup.GroupId

  MasterSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group For Master
      VpcId: !Ref VPC
      Tags:
        - Key: user
          Value: !Ref AWS::StackName

  AgentSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group For Agent
      VpcId: !Ref VPC
      Tags:
        - Key: user
          Value: !Ref AWS::StackName

  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group For Database
      VpcId: !Ref VPC
      Tags:
        - Key: user
          Value: !Ref AWS::StackName

  DatabaseSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: determined-db-subnet-group
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      Tags:
        - Key: user
          Value: !Ref AWS::StackName

  Database:
    Type: AWS::RDS::DBCluster
    DeletionPolicy: Delete
    Properties:
      Engine: aurora-postgresql
      EngineMode: serverless
      DatabaseName: determined
      DBClusterParameterGroupName: 'default.aurora-postgresql10'
      DBSubnetGroupName: !Ref DatabaseSubnetGroup
      MasterUsername: postgres
      MasterUserPassword: !Ref DBPassword
      Tags:
        - Key: user
          Value: !Ref AWS::StackName
      VpcSecurityGroupIds:
        - !GetAtt DatabaseSecurityGroup.GroupId
      ScalingConfiguration:
        AutoPause: true
        SecondsUntilAutoPause: 3600
        MinCapacity: 2
        MaxCapacity: 8

  LogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /${LogGroupPrefix}/${AWS::StackName}

  LogPolicy:
    Type: AWS::IAM::Policy
    Properties:
      Roles:
        - !Ref AgentRole
        - !Ref MasterRole
      PolicyName: agent-log-policy
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
              - logs:DescribeLogStreams
            Resource:
              - !Sub arn:aws:logs:*:*:log-group:${LogGroup},
              - !Sub arn:aws:logs:*:*:log-group:${LogGroup}:log-stream:*

  MetricPolicy:
    Type: AWS::IAM::Policy
    Properties:
      Roles:
        - !Ref AgentRole
        - !Ref MasterRole
      PolicyName: agent-metric-policy
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Action:
              - cloudwatch:PutMetricData
            Effect: Allow
            Resource: "*"

  BastionEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap
        - RegionMap
        - !Ref AWS::Region
        - Bastion
      InstanceType: !Ref BastionInstanceType
      KeyName: !Ref Keypair
      SubnetId: !Ref PublicSubnet
      SecurityGroupIds:
        - !Ref BastionSecurityGroup
      Tags:
        - Key: user
          Value: !Ref AWS::StackName

  AgentRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Policies:
        - PolicyName: agent-s3-policy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: "s3:*"
                Resource: "*"
        - PolicyName: determined-ec2
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - ec2:DescribeInstances
                Resource: "*"

  AgentInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref AgentRole

  MasterRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Policies:
        - PolicyName: determined-agent-policy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - ec2:DescribeInstances
                  - ec2:TerminateInstances
                  - ec2:CreateTags
                  - ec2:RunInstances
                  - ec2:CancelSpotInstanceRequests
                  - ec2:RequestSpotInstances
                  - ec2:DescribeSpotInstanceRequests
                Resource: "*"
        - PolicyName: pass-role
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: iam:PassRole
                Resource: !GetAtt AgentRole.Arn
      Tags:
        - Key: user
          Value: !Ref AWS::StackName

  MasterInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref MasterRole

  MasterInstance:
    Type: AWS::EC2::Instance
    Properties:
      SubnetId: !Ref PrivateSubnet1
      InstanceType: !Ref MasterInstanceType
      ImageId: !FindInMap
        - RegionMap
        - !Ref AWS::Region
        - Master
      KeyName: !Ref Keypair
      IamInstanceProfile: !Ref MasterInstanceProfile
      SecurityGroupIds:
        - !Ref MasterSecurityGroup
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 200
            VolumeType: gp2
      UserData:
        Fn::Base64: !Sub
          - |
            Content-Type: multipart/mixed; boundary="//"
            MIME-Version: 1.0

            --//
            Content-Type: text/cloud-config; charset="us-ascii"
            MIME-Version: 1.0
            Content-Transfer-Encoding: 7bit
            Content-Disposition: attachment; filename="cloud-config.txt"

            #cloud-config
            cloud_final_modules:
            - [scripts-user, always]

            --//
            Content-Type: text/x-shellscript; charset="us-ascii"
            MIME-Version: 1.0
            Content-Transfer-Encoding: 7bit
            Content-Disposition: attachment; filename="userdata.txt"

            #!/bin/bash
            mkdir -p /usr/local/determined/etc

            scheme=http
            port=8080
            if [ -n "${MasterTLSCert}" ] && [ -n "${MasterTLSKey}" ]; then
              scheme=https
              port=8443
              base64 -d <<<"${MasterTLSCert}" | tee /usr/local/determined/etc/master.crt
              base64 -d <<<"${MasterTLSKey}" | tee /usr/local/determined/etc/master.key
            fi

            cat << 'EOF' > /usr/local/determined/etc/master.yaml.tmpl
            ${MasterConfigTemplate}
            EOF

            cat << EOF > /usr/local/determined/etc/master.yaml.context
            checkpoint_storage:
              bucket: ${CheckpointBucket}

            db:
              password: "${DBPassword}"
              host: "${Database.Endpoint.Address}"

            enable_cors: ${EnableCORS}

            resource_manager:
              scheduler:
                type: ${SchedulerType}
                preemption: ${PreemptionEnabled}

            resource_pools:
              pools:
                aux_pool:
                  max_aux_containers_per_agent: ${MaxAuxContainersPerAgent}
                  instance_type: ${AuxAgentInstanceType}
                compute_pool:
                  instance_type: ${ComputeAgentInstanceType}
              aws:
                master_cert_name: ${MasterCertName}
                iam_instance_profile_arn: ${AgentInstanceProfile.Arn}
                image_id: ${AgentAmi}
                agent_docker_image: ${ImageRepoPrefix}/determined-agent:${Version}
                instance_name: determined-agent-${AWS::StackName}
                log_group: /${LogGroupPrefix}/${AWS::StackName}
                log_stream: determined-agent
                master_url: $scheme://local-ipv4:$port
                max_idle_agent_period: ${MaxIdleAgentPeriod}
                max_agent_starting_period: ${MaxAgentStartingPeriod}
                min_instances: ${MinDynamicAgents}
                max_instances: ${MaxDynamicAgents}
                spot: ${SpotEnabled}
                spot_max_price: "${SpotMaxPrice}"
                network_interface:
                  public_ip: true
                  security_group_id: ${AgentSecurityGroup.GroupId}
                  subnet_id: ${PrivateSubnet1}
                type: aws
                root_volume_size: 200
                ssh_key_name: ${Keypair}
                tag_key: det-${AWS::StackName}
                tag_value: det-agent-${AWS::StackName}

            scheme: $scheme
            cpu_env_image: ${CpuEnvImage}
            gpu_env_image: ${GpuEnvImage}
            EOF

            apt-get remove docker docker-engine docker.io containerd runc
            apt-get update
            apt-get install -y \
                apt-transport-https \
                ca-certificates \
                curl \
                gnupg-agent \
                software-properties-common
            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
            add-apt-repository \
               "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
               $(lsb_release -cs) \
               stable"
            apt-get update
            apt-get install -y docker-ce docker-ce-cli containerd.io

            curl -fsSL https://www.amazontrust.com/repository/AmazonRootCA1.pem > \
              /usr/local/determined/etc/db_ssl_root_cert.pem

            docker network create determined

            docker stop $(docker ps -a -q)
            docker rm $(docker ps -a -q)

            touch /usr/local/determined/etc/master.yaml
            docker run \
                --name determined-master-configurator \
                --rm \
                -v /usr/local/determined/etc/:/etc/determined/ \
                --entrypoint /bin/bash \
                ${ImageRepoPrefix}/determined-master:${Version} \
                -c "/usr/bin/determined-gotmpl -i /etc/determined/master.yaml.context /etc/determined/master.yaml.tmpl > /etc/determined/master.yaml"
            test $? -eq 0 || ( echo "Failed to generate master.yaml" && exit 1 )

            docker run \
                --name determined-master \
                --network determined \
                --restart unless-stopped \
                --log-driver=awslogs \
                --log-opt awslogs-group=${LogGroup} \
                --log-opt awslogs-stream=determined-master \
                -p "$port":"$port" \
                -v /usr/local/determined/etc/:/etc/determined/ \
                ${ImageRepoPrefix}/determined-master:${Version}
            --//

          - AgentAmi: !FindInMap [RegionMap, !Ref "AWS::Region", Agent]
      Tags:
        - Key: user
          Value: !Ref AWS::StackName
        - Key: Name
          Value: !Sub det-master-${AWS::StackName}

  CheckpointBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub det-${AWS::StackName}-${AWS::Region}-${AWS::AccountId}

Outputs:
  VPC:
    Description: A reference to the created VPC
    Value: !Ref VPC

  PublicSubnetId:
    Description: A list of the public subnets
    Value: !Ref PublicSubnet

  PrivateSubnetId:
    Description: A list of the private subnets
    Value: !Ref PrivateSubnet1

  BastionId:
    Description: Id of Bastion
    Value: !Ref BastionEC2Instance

  MasterId:
    Description: Id of Master Agent
    Value: !Ref MasterInstance

  MasterSecurityGroupId:
    Description: Id of Master Security Group
    Value: !GetAtt MasterSecurityGroup.GroupId

  AgentSecurityGroupId:
    Description: Id of Agent Security Group
    Value: !GetAtt AgentSecurityGroup.GroupId

  AgentInstanceProfile:
    Description: Instance Profile for Agent
    Value: !GetAtt AgentInstanceProfile.Arn

  CheckpointBucket:
    Description: S3 Bucket for checkpoints
    Value: !Ref CheckpointBucket

  Version:
    Description: Determined version or commit
    Value: !Ref Version

  AgentTagName:
    Description: Tag Name for the agents
    Value: !Sub determined-agent-${AWS::StackName}

  LogGroup:
    Description: The Log Group for Determined Logs
    Value: !Ref LogGroup

  Region:
    Description: The AWS Region the stack is deployed in
    Value: !Ref AWS::Region
